--- a/guess.html
+++ b/guess.html
@@ -19,19 +19,16 @@
     // Загадываем случайное число
     var gN = Math.floor(Math.random() * (max - min + 1)) + min;
     document.write ("<p>Компьютер загадал число от " + min + " до " + max + ". Угадайте его за 7 попыток.</p>");
-    // игроки
-    for (var user = 1; user <= 2; user++) 
-    {
-        document.write ("<p>" + user + " игрок.</p>")
+   
     // Номер попытки
             var tryCount = 1;
             var usersAnswer;
             do
             {
-            usersAnswer = parseInt(prompt(user + " игрок. " + tryCount + " попытка. Ваш вариант:"));
+            usersAnswer = parseInt(prompt(tryCount + " попытка. Ваш вариант:"));
             while(isNaN(usersAnswer) || usersAnswer > max || usersAnswer < min)
             {
-            usersAnswer = parseInt(prompt(user + " игрок. " + tryCount + " попытка. Ваш вариант:"));
+            usersAnswer = parseInt(prompt(tryCount + " попытка. Ваш вариант:"));
             }
 
             document.write(tryCount + " попытка. " + usersAnswer + " ");
