загадки (reverted from commit ab7207043b9a99b611d88ae8e491a25e9266627e)

--- a/puzzles.html
+++ b/puzzles.html
@@ -1,4 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
+</head>	
+<body>	
+<div id="header">
+    <a href="#">Главная</a><span>/</span>
+    <a href="puzzles.html">Загадки</a><span>/</span>
+    <a href="guess.hyml">Угадайка</a><span>/</span>
+    <a href="media.html">Угадайка мультиплеер</a>
+</div>
 <script>
 	var rightAns = 0;
 
