--- a/media.html
+++ b/media.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <div id="header">
-    <a href="#">Главная</a><span>/</span>
+    <a href="index.html">Главная</a><span>/</span>
     <a href="puzzles.html">Загадки</a><span>/</span>
     <a href="guess.hyml">Угадайка</a><span>/</span>
     <a href="media.html">Угадайка мультиплеер</a>
