--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="header">
 	<a href="#">Главная</a><span>/</span>
 	<a href="puzzles.html">Загадки</a><span>/</span>
-	<a href="guess.hyml">Угадайка</a><span>/</span>
+	<a href="guess.html">Угадайка</a><span>/</span>
 	<a href="media.html">Угадайка мультиплеер</a>
 </div>
 <div id="content">
