--- a/media.html
+++ b/media.html
@@ -3,44 +3,34 @@
 <head>
 	<meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
-</head>	
-<body>	
-<div id="header">
-    <a href="index.html">Главная</a><span>/</span>
-    <a href="puzzles.html">Загадки</a><span>/</span>
-    <a href="guess.hyml">Угадайка</a><span>/</span>
-    <a href="media.html">Угадайка мультиплеер</a>
-</div>
-<script>
-
-    var min=1;
-    var max=100;
-
-    // Загадываем случайное число
-    var gN = Math.floor(Math.random() * (max - min + 1)) + min;
-    document.write ("<p>Компьютер загадал число от " + min + " до " + max + ". Угадайте его за 7 попыток.</p>");
-    // игроки
-    for (var user = 1; user <= 2; user++) 
+<script type="text/javascript">
+    function startGame(gN, user,tryCount, usersAnswer)
     {
-        document.write ("<p>" + user + " игрок.</p>")
+        // Загадываем случайное число
+     gN = Math.floor(Math.random() * (100 - 1 + 1)) + 1;
+    alert ("Компьютер загадал число от " + 1 + " до " + 100 + ". Угадайте его за 7 попыток.");
+    // игроки
+    for ( user = 1; user <= 2; user++) 
+    {
+        alert ( user + " игрок.")
     // Номер попытки
-            var tryCount = 1;
-            var usersAnswer;
+             tryCount = 1;
+            
             do
             {
             usersAnswer = parseInt(prompt(user + " игрок. " + tryCount + " попытка. Ваш вариант:"));
-            while(isNaN(usersAnswer) || usersAnswer > max || usersAnswer < min)
+            while(isNaN(usersAnswer) || usersAnswer > 100 || usersAnswer < 1)
             {
             usersAnswer = parseInt(prompt(user + " игрок. " + tryCount + " попытка. Ваш вариант:"));
             }
 
-            document.write(tryCount + " попытка. " + usersAnswer + " ");
+            alert (tryCount + " попытка. " + usersAnswer + " ");
             if (usersAnswer > gN) {
-            document.write("<b>Перелет</b><br>");
+            alert ("Перелет");
             }
 
             if (usersAnswer < gN) {
-            document.write("<strong>Недолет</strong><br>");
+            alert ("Недолет");
             }
 
     //  Увеличиваем количество попыток на единицу
@@ -49,14 +39,33 @@
         while (usersAnswer != gN && tryCount <= 7);
         if (usersAnswer == gN)
         {
-        document.write ("<br> Поздравляем! Вы угадали!");
+        alert  (" Поздравляем! Вы угадали!");
         }
 
         else {
-        document.write("Вы проиграли! <br> Ответ: " + gN +".");
+        alert ("Вы проиграли!  Ответ: " + gN +".");
         }
     }
-
+    }
 </script>
+</head>	
+<body>	
+<div id="header">
+    <a href="index.html">Главная</a><span>/</span>
+    <a href="puzzles.html">Загадки</a><span>/</span>
+    <a href="guess.html">Угадайка</a><span>/</span>
+    <a href="#">Угадайка мультиплеер</a>
+</div>
+
+<div id="content">
+    <h1>Угадайка мультиплеер</h1>
+    <div id="box">
+
+        <input  type="button" 
+                value="Играть"
+                onclick="startGame();">
+
+    </div>
+    </div>
 </body>
 </html>
