--- a/media.html
+++ b/media.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+    <title>Угадайка мультиплеер</title>
 <link rel="stylesheet" href="style.css">
 <script type="text/javascript">
     function startGame(gN, user,tryCount, usersAnswer)
