--- a/guess.html
+++ b/guess.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+    <title>Угадайка</title>
 <link rel="stylesheet" href="style.css">
 <script>
     function guess(gN, tryCount, usersAnswer)
